--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 
 projekt_dashboard/build-Dashboard-Desktop_Qt_5_8_0_MSVC2015_64bit-Debug/debug/Dashboard.vc.pdb
+
+# Ignorer compilerede assemblerfiler
+Assemblerkode/*.cof
+Assemblerkode/*.eep.hex
+Assemblerkode/*.hex
+Assemblerkode/*.obj
